--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -15,4 +15,6 @@ jobs:
           python -m pip install --upgrade pip
           pip install pytest
       - name: Run pytest
-        run: pytest -v scripts/
+        run: |
+          cd scripts
+          pytest -v
