--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -1,20 +1,28 @@
-name: Run Automated Tests
+name: Run Automated Tests (Matrix)
+
 on: [push, pull_request]
+
 jobs:
   test:
-    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        os: [ubuntu-latest, windows-latest, macos-latest]
+    runs-on: ${{ matrix.os }}
+
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
+
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.10'
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install pytest
+
       - name: Run pytest
-        run: |
-          cd scripts
-          pytest -v
+        run: pytest -v scripts/
+
